--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
   <!-- CSS -->
   <style>
+    :root {
+      --bColor: #333;
+      --color: #ddd;
+    }
+
     html, body { height: 100%; }
     body {
       display: flex;
@@ -15,6 +20,8 @@
       justify-content: center;
       align-items: center;
 
+      background-color: var(--bColor);
+      color: var(--color);
       font-family: 'Courier New', Courier, monospace;
     }
     form {
@@ -25,10 +32,16 @@
       align-items: center;
     }
     input {
+      padding: 4px 4px 1px 4px;
       width: 40px;
       font-size: 24px;
+      border: 1px solid var(--color);
+      color: var(--color);
+      background-color: var(--bColor);
     }
     button {
+      color: var(--color);
+      background-color: var(--bColor);
       font-size: 16px;
       font-family: 'Courier New', Courier, monospace;
     }
